--- a/app/src/main/res/layout/fragment_edit_restarant.xml
+++ b/app/src/main/res/layout/fragment_edit_restarant.xml
@@ -6,6 +6,7 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
+                android:windowSoftInputMode="stateHidden"
                 android:background="#000">
 
     <FrameLayout
@@ -13,25 +14,22 @@
         android:layout_height="match_parent"
         android:alpha="0.4"
         android:background="@drawable/bg_landing">
-
     </FrameLayout>
 
     <LinearLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         android:orientation="vertical"
-        android:weightSum="25">
+        android:weightSum="25"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <View
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="2" />
-
-
 
         <android.support.v7.widget.CardView
             style="@style/bgLinearData"
@@ -62,12 +60,12 @@
                         android:layout_weight="1"
                         android:src="@drawable/shop_black" />
                     <EditText
-                        android:id="@+id/editText"
+                        android:id="@+id/et_name"
                         style="@style/editTextInEditActivity"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="7"
-                        android:text="ชื่อร้านารหาร" />
+                        android:text="ชื่อร้านอาหาร" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -104,8 +102,6 @@
                             android:text="-" />
                     </RelativeLayout>
 
-
-
                     <EditText
                         style="@style/editTextInEditActivity"
                         android:layout_width="0dp"
@@ -129,6 +125,7 @@
                         android:src="@drawable/clock_black" />
                     <EditText
                         style="@style/editTextInEditActivity"
+                        android:id="@+id/et_time_open"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="2"
@@ -149,6 +146,7 @@
                     </RelativeLayout>
 
                     <EditText
+                        android:id="@+id/et_time_close"
                         style="@style/editTextInEditActivity"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -169,7 +167,9 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:src="@drawable/phone_black" />
+
                     <EditText
+                        android:id="@+id/et_tel"
                         style="@style/editTextInEditActivity"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -189,34 +189,15 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:src="@drawable/price_black" />
+                        android:src="@drawable/road_black" />
+
                     <EditText
+                        android:id="@+id/et_address"
                         style="@style/editTextInEditActivity"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="2"
-                        android:text="1,000" />
-
-                    <RelativeLayout
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1">
-
-                        <TextView
-                            style="@style/editTextInEditActivity"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerHorizontal="true"
-                            android:layout_centerVertical="true"
-                            android:text="-" />
-                    </RelativeLayout>
-
-                    <EditText
-                        style="@style/editTextInEditActivity"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="2"
-                        android:text="5,000" />
+                        android:layout_weight="5"
+                        android:text="11/5" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -234,17 +215,13 @@
                         android:layout_weight="1"
                         android:src="@drawable/map_black" />
 
-                    <ImageView
+                    <ImageButton
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="7"
                         android:background="@drawable/background_cardview"
                         android:src="@drawable/map_fix" />
                 </LinearLayout>
-
-
-
-
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
