--- a/app/src/main/res/layout/activity_restaurant_search.xml
+++ b/app/src/main/res/layout/activity_restaurant_search.xml
@@ -28,16 +28,16 @@
 
   <FrameLayout
       android:id="@+id/fl_map"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+android:layout_centerInParent="true"
       android:visibility="invisible">
-    <fragment
+   <!-- <fragment
         android:id="@+id/map_fake"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        />
+        />-->
   </FrameLayout>
 
   <FrameLayout
