--- a/app/src/main/res/layout/activity_map_direction.xml
+++ b/app/src/main/res/layout/activity_map_direction.xml
@@ -18,7 +18,7 @@
         sothree:umanoDragView="@+id/dragView"
         sothree:umanoFadeColor="@android:color/transparent"
         sothree:umanoOverlay="true"
-        sothree:umanoPanelHeight="33dp"
+        sothree:umanoPanelHeight="30dp"
         sothree:umanoScrollableView="@+id/recycler_view"
         sothree:umanoShadowHeight="0dp">
 
@@ -39,7 +39,7 @@
         <LinearLayout
 
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="80dp"
             android:background="@android:color/transparent"
             android:clickable="true"
             android:focusable="false"
@@ -63,10 +63,16 @@
                 android:id="@+id/ln_SearchData"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:gravity="right"
                 android:background="@color/black_transparent"
-                android:orientation="vertical">
+                android:orientation="horizontal">
 
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_car"/>
                 <TextView
+                    style="@style/SimpleTextCloud.mini.bold"
                     android:id="@+id/tv_direction"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -74,7 +80,7 @@
                     android:textColor="#000000"
                     android:padding="5dp"
                     android:layout_gravity="right"
-                    style="@style/SimpleTextCloud.medium.bold"
+                    android:gravity="center"
                     android:text="ระยะทาง"
                     />
 
