--- a/app/src/main/res/layout/fragment_add_benefits_res.xml
+++ b/app/src/main/res/layout/fragment_add_benefits_res.xml
@@ -4,6 +4,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
+              android:background="@drawable/bg_landing"
               tools:context="com.buu.se.searchbangsaen.add_categories.fragment.AddBenefitsResFragment">
 
     <android.support.v7.widget.CardView
@@ -35,15 +36,30 @@
                 android:layout_centerInParent="true"
                 android:gravity="center"
                 android:lines="1"
-                android:text="สิ้งอำนวยความสะดวก"
+                android:text="สิ่งอำนวยความสะดวก"
                 android:textColor="#ffffffff"
                 />
 
         </RelativeLayout>
 
     </android.support.v7.widget.CardView>
-    <android.support.v7.widget.CardView
+
+    <ScrollView
+        android:id="@+id/sv_detail"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/tvTitle">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/tvTitle"
+
+            android:orientation="vertical"
+            android:weightSum="20">
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:background="@drawable/btn_border_select_time"
@@ -232,11 +248,13 @@
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:layout_margin="10dp">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="bottom"
+                android:layout_margin="10dp"
+                android:gravity="bottom">
 
         <Button
             android:id="@+id/btn_submit_final_add"
@@ -247,4 +265,6 @@
             style="@style/SimpleTextCloud.mini.bold"
             android:textColor="#60d9cb"/>
     </RelativeLayout>
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
