--- a/app/src/main/res/layout/fragment_add_detail_res.xml
+++ b/app/src/main/res/layout/fragment_add_detail_res.xml
@@ -3,8 +3,8 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:background="@drawable/bg_landing"
               android:orientation="vertical"
+              android:background="@drawable/bg_landing"
 
               tools:context="com.buu.se.searchbangsaen.add_categories.fragment.AddDetailResFragment">
 
@@ -45,14 +45,6 @@
 
     </android.support.v7.widget.CardView>
 
-    <!--<TextView
-        style="@style/SimpleTextCloud.medium.bold"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:lines="1"
-        android:text="กรอกรายละเอียดร้านอาหาร"/>-->
     <ScrollView
         android:id="@+id/sv_detail"
         android:layout_width="match_parent"
@@ -60,11 +52,11 @@
         android:alpha="0.9"
         android:paddingTop="20dp"
         >
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
+
             android:orientation="vertical">
 
             <android.support.v7.widget.CardView
@@ -282,6 +274,14 @@
                             android:text="@string/saturday"/>
 
                     </LinearLayout>
+                    <TextView
+                        android:id="@+id/text_error"
+                        android:visibility="gone"
+                        android:textColor="@color/Text_error"
+                        android:text="กรุณาเลือก 1 ตัวเลือก"
+                        android:gravity="center"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
                 </LinearLayout>
             </android.support.v7.widget.CardView>
 
