--- a/app/src/main/res/layout/fragment_add_picture_hotel.xml
+++ b/app/src/main/res/layout/fragment_add_picture_hotel.xml
@@ -41,37 +41,56 @@
     </RelativeLayout>
 </android.support.v7.widget.CardView>
 
-    <ScrollView
-        android:id="@+id/sv_detail"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingTop="20dp"
-        >
+
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:orientation="vertical">
+            <GridView
+                android:id="@+id/gv_image"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="3"
+                android:columnWidth="120dp"
+                android:gravity="center"
+                android:horizontalSpacing="4dp"
+                android:numColumns="auto_fit"
+                android:paddingLeft="5dp"
+                android:paddingTop="5dp"
+                android:stretchMode="columnWidth"
+                android:verticalSpacing="4dp">
 
+            </GridView>
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="bottom"
                 android:layout_marginTop="20dp">
-
                 <Button
+                    android:id="@+id/btn_add_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/btn_border_submit_add"
+                    android:text="เพิ่มรูปภาพ"
+                    android:textColor="#FF9800"/>
+                <Button
+                    android:layout_marginTop="10dp"
+                    android:layout_below="@id/btn_add_image"
                     android:id="@+id/btn_submit"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:gravity="center"
                     android:background="@drawable/btn_border_submit"
                     android:text="ยืนยัน"
+                    android:paddingBottom="10dp"
                     android:textColor="#60d9cb"/>
 
             </RelativeLayout>
 
         </LinearLayout>
 
-    </ScrollView>
+
 </LinearLayout>
