--- a/app/src/main/res/layout/list_item_card_hotel.xml
+++ b/app/src/main/res/layout/list_item_card_hotel.xml
@@ -11,11 +11,13 @@
                                     app:cardElevation="3dp"
                                     app:contentPadding="3dp">
 
+
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
         <TextView
+            android:layout_marginLeft="5dp"
             android:paddingLeft="5dp"
             android:paddingTop="1dp"
             android:id="@+id/tv_name"
@@ -56,15 +58,6 @@
             android:weightSum="11"
             >
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="5"
-                android:orientation="vertical"
-                android:weightSum="5">
-
-
-            </LinearLayout>
 
             <TextView
                 android:id="@+id/tv_room"
