--- a/app/src/main/res/layout/list_item_card_restaurant.xml
+++ b/app/src/main/res/layout/list_item_card_restaurant.xml
@@ -14,7 +14,7 @@
     <LinearLayout
         android:id="@+id/llDetail"
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="130dp"
         android:orientation="horizontal"
         android:padding="10dp"
         >
@@ -25,7 +25,6 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2"
-            android:src="@drawable/bg_landing"
             android:adjustViewBounds="true"
             />
 
@@ -46,7 +45,7 @@
                 >
 
                 <TextView
-                    style="@style/SimpleTextCloud.bold"
+                    style="@style/SimpleTextCloud.medium.bold"
                     android:id="@+id/tvName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
