--- a/app/src/main/res/layout/fragment_edit_profile_page.xml
+++ b/app/src/main/res/layout/fragment_edit_profile_page.xml
@@ -75,7 +75,28 @@
                 android:orientation="vertical"
                 android:weightSum="10">
                 <LinearLayout
-                    android:id="@+id/ll_name"
+                android:id="@+id/ll_name"
+                style="@style/bgLinearData"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="2"
+                android:orientation="horizontal"
+                android:weightSum="8">
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:src="@drawable/name_black" />
+                <EditText
+                    android:id="@+id/et_name"
+                    style="@style/editTextInEditActivity"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="7"
+                    android:text="เจ้าของร้าน" />
+            </LinearLayout>
+                <LinearLayout
+                    android:id="@+id/ll_surename"
                     style="@style/bgLinearData"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
@@ -88,7 +109,7 @@
                         android:layout_weight="1"
                         android:src="@drawable/name_black" />
                     <EditText
-                        android:id="@+id/editText"
+                        android:id="@+id/et_sure_name"
                         style="@style/editTextInEditActivity"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -110,12 +131,16 @@
                         android:layout_weight="1"
                         android:src="@drawable/phone_black" />
                     <EditText
+                        android:id="@+id/et_tel"
                         style="@style/editTextInEditActivity"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="7"
-                        android:text="02353633X" />
+                        android:inputType="number"
+                        android:text="02353633" />
                 </LinearLayout>
+
+
 
                 <LinearLayout
                     android:id="@+id/ll_email"
@@ -131,10 +156,13 @@
                         android:layout_weight="1"
                         android:src="@drawable/email_black" />
                     <EditText
+                        android:id="@+id/et_email"
                         style="@style/editTextInEditActivity"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="7"
+                        android:maxLines="1"
+                        android:minLines="1"
                         android:text="myshop@gmail.com" />
                 </LinearLayout>
 
