--- a/app/src/main/res/layout/fragment_register_picture.xml
+++ b/app/src/main/res/layout/fragment_register_picture.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:alpha="0.3"
-        android:background="@drawable/bg_landing" />
+        android:background="@drawable/bg_beach" />
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/toolbar"
