--- a/app/src/main/res/layout/fragment_register_detail.xml
+++ b/app/src/main/res/layout/fragment_register_detail.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:alpha="0.3"
-        android:background="@drawable/bg_landing" />
+        android:background="@drawable/bg_beach" />
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/toolbar"
@@ -205,7 +205,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:layout_centerHorizontal="true"
-
                     app:cardCornerRadius="3dp"
                     app:cardElevation="3dp">
 
@@ -220,7 +219,5 @@
                 </android.support.v7.widget.CardView>
             </RelativeLayout>
         </LinearLayout>
-        /
     </LinearLayout>
-
 </RelativeLayout>
