--- a/app/src/main/res/layout/fragment_register_detail.xml
+++ b/app/src/main/res/layout/fragment_register_detail.xml
@@ -153,7 +153,7 @@
                     android:layout_marginLeft="15dp"
                     android:background="#00000000"
                     android:hint="เบอร์โทรศัพท์"
-                    android:inputType="textPassword"
+                    android:inputType="phone"
                     android:letterSpacing="0.1"
                     android:textColor="#fff"
                     android:textColorHint="#d9e5f3"
